Cinnamon theme - using 'spacing' in menus, panel, buttons and dialog entries - bugfix

--- a/src/cinnamon/scss/sections/_dialogs.scss
+++ b/src/cinnamon/scss/sections/_dialogs.scss
@@ -5,7 +5,7 @@
     border: 1px solid $exterior_border;
     border-radius: $roundness;
     color: $cinn_fg_color;
-    padding: 16px 32px;
+    padding: 16px 20px;
 }
 .modal-dialog-button-box {
     spacing: 16px;
